# template-python3

./: .gitignore  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
